Storm fronts stand off, settings reach the UI, and a floor cannot hide a bolt
Four reports from play.

The storm front was a third of the way to the fog - a wall of lightning in the
garden. It now stands at 62% of the view distance rather than 42%, which at an
ordinary render distance is half again as far. The old floor of 55 blocks became
90, and a test immediately caught what that breaks: on a six-chunk render distance
the depth spread pushed channels past the fog. The floor is therefore bounded by
what the player can actually see, because the far end of the spread is what has to
fit, not the front itself. Both properties are now pinned.

Lightning went invisible after a graphics-settings change, and the sub-pixel floor
added in the last commit is the plausible culprit: it derives a width from the
frame's projection matrix, and a matrix that is not the perspective one it expects
- a GUI ortho, an identity - yields a floor larger than any ribbon and fades the
whole storm out. Two guards, because a rendering feature may not be the reason
lightning cannot be seen: the focal length is rejected unless it is in the band a
player's field of view produces, and the dimming is floored at 30% whatever the
arithmetic says. The pixel scale is on the debug overlay now, so if it recurs the
number is visible; zero there means the measurement was rejected and no floor is
being applied at all.

The glow strength was a gate and nothing else - it did nothing until it hit zero -
and the glow itself was added at face value, which after a gaussian has spread its
energy is barely perceptible. Strength is applied now, with a gain that makes 100%
mean something, and the bright-pass threshold drops from 0.85 to 0.55 so an
ordinary flash blooms rather than only a superbolt.

The settings had no entry point in the interface at all on Fabric without ModMenu.
Both loaders now add a button to vanilla's video settings, through their own screen
events rather than a mixin - so a Minecraft update th